[추가,수정] 베스트 8개쿼리 순위 계산